--- a/app/scss/util/breakpoints.scss
+++ b/app/scss/util/breakpoints.scss
@@ -5,10 +5,11 @@ $breakpoints-up: (
 	'xlarge': '87.5em',
 );
 
-// 639px, 730px, 1149px, 1399px
+// 639px, 730px, 900px , 1149px, 1399px
 $breakpoints-down: (
 	'small': '39.9375em',
 	'small2': '45.625em',
+	'medium0': '56.25em',
 	'medium': '71.8125em',
 	'large': '87.4375em',
 );
