--- a/app/scss/components/testimonials.scss
+++ b/app/scss/components/testimonials.scss
@@ -4,7 +4,7 @@
 .testimonials{
     position: relative;
     min-height: calc(90vh - 8vh - 2rem);
-    background-image: url('images/christopher-jolly-1Ib8243cU8Q-unsplash.jpg');
+    background-image: url('images/t-background.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
