--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -80,3 +80,15 @@ ul{
     font-size: rem(50);
     margin: 0 0 rem(30) 0;
 }
+
+
+
+.person{
+    color: var(--white);
+    h1{
+        margin: 0 0 rem(5) 0;
+    }
+    p{
+        margin: 0 0 rem(50) 0;
+    }
+}
