--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -2,7 +2,6 @@
 
 .page-menu{
     min-height: calc(100vh - 8vh - 2.3rem);
-
 }
 
 .sec-t{
@@ -69,7 +68,8 @@
 
     .meals-h{
         transition: all 0.3s linear;
-        max-width: rem(100);
+        max-width: rem(117);
+        margin-right: rem(8);
     }
 }
 
