--- a/app/scss/components/reservation.scss
+++ b/app/scss/components/reservation.scss
@@ -17,11 +17,79 @@
         .explore-btn{
             background-color: rgba(0, 0, 0, 0);
             color: var(--white);
-            border: rem(5) white solid;
+            border: rem(5) var(--white) solid;
             &:hover{
                 background-color: rgb(255, 255, 255);
                 color: var(--red);
             }
         }
     }
+}
+
+.t-form{
+    min-height: 80vh;
+    background-color: var(--red);
+
+    form{
+        .title{text-align: center;}
+
+        .placeholders{
+            @include flex(center);
+            flex-wrap: wrap;
+            gap: rem(50);
+            div{ 
+                width: rem(300);
+                height: rem(50);
+
+            }
+        }
+        .form-control{
+            width: 100%;
+            height: 100%;
+            padding-left: rem(10);
+            background: transparent;
+            border: rem(1) solid var(--white-border);
+            color: var(--white) ;
+            border-radius: rem(2);
+        }
+
+        .f-btn{
+            padding: 0;
+            cursor: pointer;
+            background: var(--white);
+            color: var(--black); 
+            transition: all 0.3s linear;
+            
+            &:hover{
+                color: var(--red);
+            }
+        }
+    }
+        
+}
+
+
+
+#options{
+    width: 100%;
+    height: 100%;
+    background: #00000000;
+    border: rem(1) solid var(--white-border);
+    border-radius: rem(2);
+    color: var(--white);
+
+    option{
+        background-color: var(--red);
+
+    }
+}
+
+
+input[type="time"]::-webkit-calendar-picker-indicator{
+    filter: invert(100%) sepia(4%) saturate(345%) hue-rotate(239deg) brightness(114%) contrast(85%);
+    padding-right:rem(10);
+}
+input[type="date"]::-webkit-calendar-picker-indicator{
+    filter: invert(100%) sepia(4%) saturate(345%) hue-rotate(239deg) brightness(114%) contrast(85%);
+    padding-right:rem(10);
 }
