--- a/app/scss/util/breakpoints.scss
+++ b/app/scss/util/breakpoints.scss
@@ -5,8 +5,9 @@ $breakpoints-up: (
 	'xlarge': '87.5em',
 );
 
-// 639px, 730px, 900px , 1149px, 1399px
+// 300px, 639px, 730px, 900px , 1149px, 1399px
 $breakpoints-down: (
+	'verysmall': '18.75em',
 	'small': '39.9375em',
 	'small2': '45.625em',
 	'medium0': '56.25em',
